# OOP-Spring-2023

./: .gitignore
anashkin_i_a/: .build.bat  .gitignore  CMakeLists.txt
anashkin_i_a/DynamicArray/: CMakeLists.txt
anashkin_i_a/DynamicArray/lib/: CMakeLists.txt  dynamic_array.hpp
anashkin_i_a/DynamicArray/prj.lab/: CMakeLists.txt
anashkin_i_a/DynamicArray/prj.lab/arrayd/: CMakeLists.txt  arrayd.cpp
anashkin_i_a/DynamicArray/prj.lab/arrayd/include/arrayd/: arrayd.hpp
anashkin_i_a/DynamicArray/prj.test/: CMakeLists.txt  arrayd_test.cpp
anashkin_i_a/DynamicArray/test/: CMakeLists.txt  test_lib.cpp  test_lib.hpp
anashkin_i_a/RationalNumbers/: CMakeLists.txt  CMakePresets.json  main.cpp
anashkin_i_a/RationalNumbers/lib/: CMakeLists.txt  rational.cpp  rational.hpp
anashkin_i_a/RationalNumbers/prj.lab/rational/: CMakeLists.txt  rational.cpp
anashkin_i_a/RationalNumbers/prj.test/: CMakeLists.txt
anashkin_i_a/RationalNumbers/test/: CMakeLists.txt  test.cpp  test.hpp
anashkin_i_a/prj.cw/: CMakeLists.txt  main.cpp
anashkin_i_a/prj.cw/lib/: CmakeLists.txt  color_transfer.cpp
anashkin_i_a/prj.cw/lib/include/color_transfer/: color_transfer.hpp
anashkin_i_a/prj.lab/: CMakeLists.txt
anashkin_i_a/prj.lab/arrayd/: arrayd.cpp
anashkin_i_a/prj.lab/arrayd/include/arrayd/: arrayd.hpp
anashkin_i_a/prj.lab/arrayt/: CMakeLists.txt  arrayt.cpp
anashkin_i_a/prj.lab/arrayt/include/arrayt/: arrayt.hpp
anashkin_i_a/prj.lab/geo2d/: CMakeLists.txt  geo2d.cpp
anashkin_i_a/prj.lab/geo2d/include/geo2d/: geo2d.hpp
anashkin_i_a/prj.lab/matrix/: CMakeLists.txt
anashkin_i_a/prj.lab/matrix/include/matrix/: matrix.hpp
anashkin_i_a/prj.lab/matrixs/: CMakeLists.txt  matrixs.cpp
anashkin_i_a/prj.lab/matrixs/include/matrixs/: matrixs.hpp
anashkin_i_a/prj.lab/orto/: main.cpp
anashkin_i_a/prj.lab/rational/: rational.cpp
anashkin_i_a/prj.lab/rational/include/rational/: rational.hpp
anashkin_i_a/prj.test/: CMakeLists.txt  arrayd_test.cpp  arrayt_test.cpp  geo2d_test.cpp  matrixs_test.cpp  rational_test.cpp
